--- a/CFMMCD/Views/TextGenerator/Index.cshtml
+++ b/CFMMCD/Views/TextGenerator/Index.cshtml
@@ -34,9 +34,9 @@
                     <div class="form-inline">
                         @Html.LabelFor(m => m.DateFrom, "Date from", new { @class = "form-label" })
                         @Html.TextBoxFor(m => m.DateFrom, new { @class = "form-control input-sm", @type = "date" })
-                    </div>
+                    </div><br/>
                     <div class="form-inline">
-                        @Html.LabelFor(m => m.DateTo, "Date to", new { @class = "form-label" })
+                        @Html.LabelFor(m => m.DateTo, "Date to", new { @class = "form-label" })&emsp;&nbsp;
                         @Html.TextBoxFor(m => m.DateTo, new { @class = "form-control input-sm", @type = "date" })
                     </div>
                 </div>
