--- a/CFMMCD/Views/ValueMeal/Index.cshtml
+++ b/CFMMCD/Views/ValueMeal/Index.cshtml
@@ -55,7 +55,7 @@
                 <div class="col-lg-4 col-lg-offset-3">
                     <div class="col-lg-12">
                         @Html.LabelFor(m => Model.VMLNUM, "Value meal number", new { @class = "form-label" })
-                        @Html.TextBoxFor(m => Model.VMLNUM, new { @class = "form-control" })
+                        @Html.TextBoxFor(m => Model.VMLNUM, new { @class = "form-control",@type = "number",@maxlength = "6" })
 
                     </div>
                     <div class="col-lg-12">
@@ -67,12 +67,12 @@
                 <div class="col-lg-4">
                     <div class="col-lg-12">
                         @Html.LabelFor(m => Model.VMLPRI, "Price in", new { @class = "form-label" })
-                        @Html.TextBoxFor(m => Model.VMLPRI, new { @class = "form-control" })
+                        @Html.TextBoxFor(m => Model.VMLPRI, new { @class = "form-control",@type = "number" })
 
                     </div>
                     <div class="col-lg-12">
                         @Html.LabelFor(m => Model.VMLPRO, "Price out", new { @class = "form-label" })
-                        @Html.TextBoxFor(m => Model.VMLPRO, new { @class = "form-control" })
+                        @Html.TextBoxFor(m => Model.VMLPRO, new { @class = "form-control",@type = "number" })
                     </div>
                 </div>
             </div>
@@ -100,22 +100,22 @@
                                     <!--Generated rows-->
                                     <tr>
                                         <td></td>
-                                        <td> @Html.TextBoxFor(m => Model.MenuItemList[i].MIMMIC, new { @class = "form-control input-sm" }) </td>
-                                        <td> @Html.DisplayFor(m => Model.MenuItemList[i].MIMNAM, new { @class = "form-control input-sm" }) </td>
-                                        <td> @Html.DisplayFor(m => Model.MenuItemList[i].MIMPRI, new { @class = "form-control input-sm" }) </td>
-                                        <td> @Html.DisplayFor(m => Model.MenuItemList[i].MIMPRO, new { @class = "form-control input-sm" }) </td>
-                                        <td>@Html.TextBoxFor(m => Model.MenuItemList[i].VMLQUA, new { @class = "form-control input-sm" })</td>
+                                        <td> @Html.TextBoxFor(m => Model.MenuItemList[i].MIMMIC, new { @class = "form-control input-sm",@type = "number",@maxlength = "6" }) </td>
+                                        <td> @Html.DisplayFor(m => Model.MenuItemList[i].MIMNAM, new { @class = "form-control input-sm",@maxlength = "6" }) </td>
+                                        <td> @Html.DisplayFor(m => Model.MenuItemList[i].MIMPRI, new { @class = "form-control input-sm",@type = "number", @maxlength = "3" }) </td>
+                                        <td> @Html.DisplayFor(m => Model.MenuItemList[i].MIMPRO, new { @class = "form-control input-sm", @type = "number", @maxlength = "3" }) </td>
+                                        <td>@Html.TextBoxFor(m => Model.MenuItemList[i].VMLQUA, new { @class = "form-control input-sm", @type = "number", @maxlength = "2" })</td>
                                     </tr>
                                 }
                             }
                             <!--Empty row-->
                             <tr>
                                 <td></td>
-                                <td> @Html.TextBoxFor(m => Model.MIMMIC[0], new { @class = "form-control input-sm" }) </td>
-                                <td> @Html.DisplayFor(m => Model.MIMNAM[0], new { @class = "form-control input-sm" }) </td>
-                                <td> @Html.DisplayFor(m => Model.MIMPRI[0], new { @class = "form-control input-sm" }) </td>
-                                <td> @Html.DisplayFor(m => Model.MIMPRO[0], new { @class = "form-control input-sm" }) </td>
-                                <td>@Html.TextBoxFor(m => Model.VMLQUA[0], new { @class = "form-control input-sm" })</td>
+                                <td> @Html.TextBoxFor(m => Model.MIMMIC[0], new { @class = "form-control input-sm", @type = "number", @maxlength = "6" }) </td>
+                                <td> @Html.DisplayFor(m => Model.MIMNAM[0], new { @class = "form-control input-sm", @maxlength = "6" }) </td>
+                                <td> @Html.DisplayFor(m => Model.MIMPRI[0], new { @class = "form-control input-sm", @type = "number", @maxlength = "3" }) </td>
+                                <td> @Html.DisplayFor(m => Model.MIMPRO[0], new { @class = "form-control input-sm", @type = "number", @maxlength = "3" }) </td>
+                                <td>@Html.TextBoxFor(m => Model.VMLQUA[0], new { @class = "form-control input-sm", @type = "number", @maxlength = "2" })</td>
 
                             </tr>
                         }
