--- a/CFMMCD/Views/VendorMaster/Index.cshtml
+++ b/CFMMCD/Views/VendorMaster/Index.cshtml
@@ -70,7 +70,7 @@
             <div class="col-lg-3 col-lg-offset-1">
                 <div class="col-lg-12">
                     <label class="form-label">Location</label>
-                    @Html.DropDownListFor(m => Model.VEMLOC, new SelectList(Model.LocationList, "value", "text", "0"), new { @class = "form-control input-sm" })
+                    @Html.DropDownListFor(m => Model.VEMLOC, new SelectList(Model.LocationList, "value", "text", "0"), new { @class = "form-control input-sm",@maxlength = "1" })
                 </div>
                 <div class="col-lg-12">
                     @Html.LabelFor(model => Model.Region, "Region", new { @class = "form-label" })
