--- a/CFMMCD/Views/MenuRecipe/Index.cshtml
+++ b/CFMMCD/Views/MenuRecipe/Index.cshtml
@@ -27,28 +27,12 @@
 <!--Main content starts here-->
 <div class="form-horizontal">
 
-    <div class="form-horizontal">
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
-            <div class="container-fluid">
-                <div class="col-lg-2 col-lg-offset-2">
-                    <label class="form-label" for="menu-item">Menu item/ Product name</label>
-                </div>
-                <div class="col-lg-5">
-                    @Html.TextBoxFor(m => m.SearchItem, new { @class = "form-control" })
-                    <div class="input-group float-right" style="padding-top:8px">
-                        <label class="checkbox-inline form-label">
-                            @Html.CheckBoxFor(m => m.InactiveItemsCb)Show inactive items
-                        </label>
-                    </div>
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                </div>
-                <div class="col-lg-1">
-                    <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span>&nbsp;Search</button>
-                </div>
+    <div class="container-fluid">
+        <div class="col-lg-6 col-lg-offset-3">
+            <div class="col-lg-12">
+                <input type="text" class="form-control" placeholder="Search menu item" id="search_dummy" />
             </div>
-        }
+        </div>
     </div>
 
     <hr />
@@ -93,6 +77,7 @@
                             <td>Price</td>
                             <td>Waste</td>
                             <td>Store attribute</td>
+                            <td></td>
                         </tr>
                     </thead>
                     <tbody>
@@ -101,35 +86,43 @@
                             {
                                 for (int i = 0; i < Model.MenuRecipeList.Count(); i++)
                                 {
+                                    // Store Raw item ID in case the text box will be overwritten with new entry
+                                    // So handler method can properly delete the Raw item entry.
+                                    Model.MenuRecipeList[i].PreviousRIRRIC = Model.MenuRecipeList[i].RIRRIC;
                                     <!--Generated rows-->
                                     <tr>
                                         @Html.HiddenFor(m => Model.MenuRecipeList[i].RIRRID)
                                         <td></td>
-                                        <td> @Html.TextBoxFor(m => Model.MenuRecipeList[i].RIRRIC, new { @class = "form-control input-sm", @type = "number", @maxlength = "5"}) </td>
-                                        <td> @Html.DisplayFor(m => Model.MenuRecipeList[i].RIMRID, new { @class = "form-control input-sm", @maxlength = "20" }) </td>
-                                        <td> @Html.TextBoxFor(m => Model.MenuRecipeList[i].RIRSFQ, new { @class = "form-control input-sm",@type = "number", @maxlength = "5" }) </td>
-                                        <td> @Html.TextBoxFor(m => Model.MenuRecipeList[i].RIMCPR, new { @class = "form-control input-sm",@type = "number", @maxlength = "15" }) </td>
+                                        <td> 
+                                            @Html.TextBoxFor(m => Model.MenuRecipeList[i].RIRRIC, new { @class = "form-control input-sm", @type = "number", @max = "99999"})
+                                            @Html.HiddenFor(m => Model.MenuRecipeList[i].PreviousRIRRIC)
+                                        </td>
+                                        <td> @Html.DisplayFor(m => Model.MenuRecipeList[i].RIMRID, new { @class = "form-control input-sm" }) </td>
+                                        <td> @Html.TextBoxFor(m => Model.MenuRecipeList[i].RIRSFQ, new { @class = "form-control input-sm",@type = "number", @max = "99999" }) </td>
+                                        <td> @Html.DisplayFor(m => Model.MenuRecipeList[i].RIMCPR, new { @class = "form-control input-sm" }) </td>
                                         <td> @Html.DropDownListFor(m => Model.MenuRecipeList[i].RIRCWC, new SelectList(new List<Object>() {
                                             new { value = "0" , text = "Active"  },
-                                            new { value = "1" , text = "Inactive" } }, "value", "text"), new { @class = "form-control input-sm", @maxlength = "1" })
+                                            new { value = "1" , text = "Inactive" } }, "value", "text", Model.MenuRecipeList[i].RIRCWC), new { @class = "form-control input-sm", @maxlength = "1" })
                                         </td>
                                         <td>@Html.DisplayFor(m => Model.MenuRecipeList[i].STOATT, new { @class = "form-control input-sm" })</td>
+                                        <td><button type="button" class="close delete-row">&times;</button></td>
                                     </tr>
                                 }
                             }
                             <!--Empty row-->
                             <tr>
                                 <td></td>
-                                <td>@Html.TextBoxFor(m => m.RIRRIC[0], new { @class = "form-control input-sm", @type = "number", @maxlength = "5" })</td>
+                                <td>@Html.TextBoxFor(m => m.RIRRIC[0], new { @class = "form-control input-sm", @type = "number", @max = "99999" })</td>
                                 <td> @Html.DisplayFor(m => m.RIMRID[0], new { @class = "form-control input-sm", @maxlength = "20" }) </td>
-                                <td> @Html.TextBoxFor(m => m.RIRSFQ[0], new { @class = "form-control input-sm", @type = "number", @maxlength = "5" }) </td>
-                                <td> @Html.TextBoxFor(m => m.RIMCPR[0], new { @class = "form-control input-sm", @type = "number", @maxlength = "15" }) </td>
+                                <td> @Html.TextBoxFor(m => m.RIRSFQ[0], new { @class = "form-control input-sm", @type = "number", @max = "99999" }) </td>
+                                <td> @Html.DisplayFor(m => m.RIMCPR[0], new { @class = "form-control input-sm" }) </td>
                                 <td>
                                     @Html.DropDownListFor(m => m.RIRCWC[0], new SelectList( new List<Object>() {
                                             new { value = "0" , text = "Active"  },
                                             new { value = "1" , text = "Inactive" } }, "value", "text"), new { @class = "form-control input-sm", @maxlength = "1" })
                                 </td>
                                 <td>@Html.DisplayFor(m => m.STOATT[0], new { @class = "form-control input-sm" })</td>
+                                <td><button type="button" class="close delete-row">&times;</button></td>
                             </tr>
                         }
                     </tbody>
@@ -155,59 +148,79 @@
     <div class="modal-content">
         <div class="modal-header">
             <button class="close" data-dismiss="modal">&times;</button>
-            <h4>Search results</h4>
-        </div>
-        @using (Html.BeginForm("DisplaySearchResult", "MenuRecipe", FormMethod.Post, new { }))
-        {
-            List<MenuItem> MIList = (List<MenuItem>)Session["ViewModelList"];
-            if (MIList != null)
-            {
-                <div class="modal-body">
-                    @{
-                        if (HasSearch == 1 && MIList != null)
-                        {
-                            foreach (MenuItem vm in MIList)
-                            {
-                                <button type="submit" class="modal-item-select" name="value" value=@vm.RIRMIC>
-                                    <div class="col-lg-3">
-                                        @vm.RIRMIC
-                                    </div>
-                                    <div class="col-lg-9">
-                                        @vm.MIMDSC
-                                    </div>
-                                </button>
-                            }
-                        }
-                    }
+            <h4>All items</h4>
+            <div class="container-fluid">
+                <input type="search" class="form-control" id="SearchFrontEnd" placeholder="Search menu item" autofocus />
+                <div class="input-group float-right" style="padding-top:8px">
+                    <label class="checkbox-inline form-label">
+                        @Html.CheckBoxFor(m => m.InactiveItemsCb)Show inactive items
+                    </label>
                 </div>
-            }
+            </div>
+        </div>
+        @using (Html.BeginForm())
+        {
+            <div class="modal-body">
+                @for (int i = 0; i < Model.MenuItemList.Count(); i++)
+                {
+                    string ActiveInactive = "active";
+                    if (Model.MenuItemList[i].MIMSTA.Equals("1"))
+                    {
+                        ActiveInactive = "inactive";
+                    }
+                    <button type="submit" class="modal-item-select tr-collapse @Model.MenuItemList[i].RIRMIC @Model.MenuItemList[i].MIMDSC @ActiveInactive" name="value" value=@Model.MenuItemList[i].RIRMIC>
+                        <div class="col-lg-3">
+                            @Model.MenuItemList[i].RIRMIC
+                        </div>
+                        <div class="col-lg-9">
+                            @Model.MenuItemList[i].MIMDSC
+                        </div>
+                    </button>
+                }
+            </div>
         }
     </div>
 </div>
+
 
 <script>
     var index = 0;
     var newRow = '<tr>'+
                     '<td></td>'+
-                        '<td><input class="form-control input-sm" id="RIRRIC_'+(++index)+'_" name="RIRRIC['+index+']" type="text" value="" /></td>' +
-                        '<td>  </td>' +
-                        '<td> <input class="form-control input-sm" id="RIRSFQ_'+index+'_" name="RIRSFQ['+index+']" type="text" value="" /> </td>' +
-                        '<td> <input class="form-control input-sm" id="RIMCPR_'+index+'_" name="RIMCPR['+index+']" type="text" value="" /> </td>' +
-                        '<td>' +
-                            '<select class="form-control input-sm" id="RIRCWC_'+index+'_" name="RIRCWC['+index+']"><option value="0">Active</option>'+
-                            '<option value="1">Inactive</option></select>' +
-                        '</td>' +
-                        '<td></td>' +
-                    '</tr>';
+                    '<td><input class="form-control input-sm" id="RIRRIC_'+(++index)+'_" name="RIRRIC['+index+']" type="number" max="99999" value="" /></td>' +
+                    '<td>  </td>' +
+                    '<td> <input class="form-control input-sm" id="RIRSFQ_'+index+'_" name="RIRSFQ['+index+']" type="number" max="99999" value="" /> </td>' +
+                    '<td></td>' +
+                    '<td>' +
+                        '<select class="form-control input-sm" id="RIRCWC_'+index+'_" name="RIRCWC['+index+']"><option value="0">Active</option>'+
+                        '<option value="1">Inactive</option></select>' +
+                    '</td>' +
+                    '<td></td>' +
+                    '<td><button type="button" class="close delete-row">&times;</button></td>' +
+                '</tr>';
 
     console.log(newRow);
     $(window).ready(function () {
-        if (@HasSearch === 1) {
-            $("#search-result-modal").modal('show');
-        }
 
+        setDeleteRowEventListener();
         $("#add-row").click(function() {
-            $("tbody").append (newRow);
+            if ($("tbody tr:last-child").children("td").children("input[type=number]").val() != "" || $("tbody tr:last-child").hasClass("hidden")) {
+                $("tbody").append (newRow);
+                setDeleteRowEventListener();
+            }
         });
     });
+
+    function setDeleteRowEventListener() {
+        $(".delete-row").click(function() {
+            var hiddenTr = $("tbody .hidden").length;
+            var totalTr = $("tbody tr").length;
+            if (totalTr-hiddenTr > 1) {
+                $(this).parent().siblings("td").each(function(){
+                    $(this).children("input[type=number]").val("");
+                });
+                $(this).parent().parent("tr").addClass("hidden");
+            }
+        });
+    }
 </script>
